🐛 Fix hidden burger menu on mobile.
 #1792

--- a/frontend/scss/components/organisms/burger-menu.scss
+++ b/frontend/scss/components/organisms/burger-menu.scss
@@ -73,7 +73,11 @@
         z-index: 1003;
       }
 
-      & ~ .ap--main, ~ .ap--footer {
+      & ~ .ap--main {
+        max-height: 100vh;
+      }
+
+      & ~ .ap--footer {
         display: none;
       }
     }
